Added package building for amd64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(md_tools)
+project(mdtools)
 
 set (CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic)
@@ -13,4 +13,4 @@ target_link_libraries(${PROJECT_NAME} candle)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/md80_usbcan/Candle/include)
 
 install(TARGETS ${PROJECT_NAME} 
-    DESTINATION ${CMAKE_SOURCE_DIR}/package/)
+    DESTINATION ${CMAKE_SOURCE_DIR}/package/mdtools_0.1-1_amd64/usr/local/bin)
