--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,28 @@
 cmake_minimum_required(VERSION 3.5)
-project(mdtool)
+
+set(MDTOOL_VERSION 1.0-0)
+
+if(NOT DEFINED ARCH)
+    set(ARCH "native")
+    execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE ARCH)
+    string(REGEX REPLACE "\n$" "" ARCH "${ARCH}")
+endif()
+
+if( "${ARCH}" STREQUAL "armhf")
+    message("Compiling for armhf")
+    set(CMAKE_CXX_COMPILER arm-linux-gnueabi-g++)
+    set(CMAKE_C_COMPILER arm-linux-gnueabi-gcc)
+elseif ( "${ARCH}" STREQUAL "aarm64")
+    message("Compiling for aarm64")
+    set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
+    set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
+else ()
+    message("Compiling for native architecture")
+    set(CMAKE_CXX_COMPILER g++)
+    set(CMAKE_C_COMPILER gcc)
+endif()
+
+project(mdtool-${ARCH})
 
 set (CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic)
@@ -12,6 +35,7 @@ add_subdirectory(md80_usbcan/Candle)
 add_executable(${PROJECT_NAME} ${SRC})
 target_link_libraries(${PROJECT_NAME} candle)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/md80_usbcan/Candle/include)
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "mdtool")
 
 install(TARGETS ${PROJECT_NAME} 
-    DESTINATION ${CMAKE_SOURCE_DIR}/package/mdtools_0.1-1_amd64/usr/local/bin)
+    DESTINATION ${CMAKE_SOURCE_DIR}/package/mdtool_${MDTOOL_VERSION}_${ARCH}/usr/local/bin)
