--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "md80_usbcan"]
-	path = md80_usbcan
-	url = git@gitlab.com:MAB_Robotics/md80_usbcan.git
+[submodule "candle"]
+	path = candle
+	url = https://github.com/mabrobotics/candle.git
