--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,17 +9,17 @@ if(NOT DEFINED ARCH)
 endif()
 
 if( "${ARCH}" STREQUAL "armhf")
-    message("Compiling for armhf")
-    set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++)
-    set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
+    message("[MDTOOL] Compiling for armhf")
+    set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
+    set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
 elseif ( "${ARCH}" STREQUAL "aarm64")
-    message("Compiling for aarm64")
-    set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
-    set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
+    message("[MDTOOL] Compiling for aarm64")
+    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
+    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
 else ()
-    message("Compiling for native architecture")
-    set(CMAKE_CXX_COMPILER g++)
-    set(CMAKE_C_COMPILER gcc)
+    message("[MDTOOL] Compiling for native architecture")
+    set(CMAKE_CXX_COMPILER /usr/bin/g++)
+    set(CMAKE_C_COMPILER /usr/bin/gcc)
 endif()
 
 project(mdtool-${ARCH})
