--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "candle"]
 	path = candle
 	url = https://github.com/mabrobotics/candle.git
-[submodule "candle_gitlab"]
-	path = candle_gitlab
-	url = https://gitlab.com/MAB_Robotics/md80_usbcan.git
 [submodule "3rd_party/mINI"]
 	path = 3rd_party/mINI
-	url = git@github.com:mabrobotics/mINI.git
+	url = https://github.com/mabrobotics/mINI.git
