--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "candle"]
 	path = candle
-	url = https://github.com/mabrobotics/candle.git
+	url = git@gitlab.com:MAB_Robotics/md80_usbcan.git
 [submodule "3rd_party/mINI"]
 	path = 3rd_party/mINI
 	url = https://github.com/mabrobotics/mINI.git
