--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(MDTOOL_VERSION 1.1-0)
+set(MDTOOL_VERSION 1.2.0)
 
 if(NOT DEFINED ARCH)
     set(ARCH "native")
@@ -8,23 +8,23 @@ if(NOT DEFINED ARCH)
     string(REGEX REPLACE "\n$" "" ARCH "${ARCH}")
 endif()
 
-if( "${ARCH}" STREQUAL "armhf")
+if("${ARCH}" STREQUAL "armhf")
     message("[MDTOOL] Compiling for armhf")
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
-elseif ( "${ARCH}" STREQUAL "aarm64")
+elseif("${ARCH}" STREQUAL "aarm64")
     message("[MDTOOL] Compiling for aarm64")
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
-else ()
+else()
     message("[MDTOOL] Compiling for native architecture")
     set(CMAKE_CXX_COMPILER /usr/bin/g++)
     set(CMAKE_C_COMPILER /usr/bin/gcc)
 endif()
 
-project(mdtool-${ARCH})
+project(mdtool-${ARCH} VERSION ${MDTOOL_VERSION})
 
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic)
 
 file(GLOB SRC "src/*.cpp")
@@ -39,5 +39,14 @@ target_link_libraries(${PROJECT_NAME} candle)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/candle/include ${CMAKE_SOURCE_DIR}/3rd_party/mINI/src)
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "mdtool")
 
-install(TARGETS ${PROJECT_NAME} 
-    DESTINATION ${CMAKE_SOURCE_DIR}/package/mdtool_${MDTOOL_VERSION}_${ARCH}/usr/local/bin)
+set(CPACK_PROJECT_NAME "mdtool")
+set(CPACK_PACKAGE_NAME "mdtool")
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "MAB Robotics <contact@mabrobotics.pl>")
+set(CPACK_GENERATOR "DEB")
+include(CPack)
+
+install(TARGETS ${PROJECT_NAME}
+    DESTINATION /usr/local/bin)
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/template_package/etc"
+    DESTINATION /)
