feature: added friction and stiction cfg parameters

--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -13,6 +13,8 @@ torque constant c = -1.0
 torque bandwidth = 50
 output encoder = 0
 output encoder dir = -1
+dynamic friction = 0.0
+static friction = 0.0
 
 
 [limit max]
@@ -26,3 +28,5 @@ torque constant c = 1.0
 torque bandwidth = 2500
 output encoder = 2
 output encoder dir = 1
+dynamic friction = 0.5
+static friction = 0.8
