--- a/template_package/MDtool_motors/AK80-6.cfg
+++ b/template_package/MDtool_motors/AK80-6.cfg
@@ -7,7 +7,9 @@ torque constant b = 0.0009
 torque constant c = 0.0681
 gear ratio = 0.166666
 max current = 10
-torque bandwidth = 0
+torque bandwidth = 500
+dynamic friction = 0.0
+static friction = 0.0
 
 [output encoder]
 output encoder = 0
