--- a/template_package/MDtool_motors/AK80-9.cfg
+++ b/template_package/MDtool_motors/AK80-9.cfg
@@ -7,7 +7,9 @@ torque constant b = 0.0009
 torque constant c = 0.0681
 gear ratio = 0.11111
 max current = 20
-torque bandwidth = 100
+torque bandwidth = 500
+dynamic friction = 0.0
+static friction = 0.0
 
 [output encoder]
 output encoder = 0
