--- a/template_package/MDtool_motors/MN4004.cfg
+++ b/template_package/MDtool_motors/MN4004.cfg
@@ -8,10 +8,12 @@ torque constant c = 0.0
 gear ratio = 1.0
 max current = 10
 torque bandwidth = 500
+dynamic friction = 0.0
+static friction = 0.0
 
 [output encoder]
-#output encoder = 0
-#output encoder dir = 0
+output encoder = 0
+output encoder dir = 0
 
 [position PID]
 kp = 10.0
