--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,7 @@ elseif("${ARCH}" STREQUAL "aarm64")
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
 else()
-    # message("[MDTOOL] Compiling for native architecture")
-    # set(CMAKE_CXX_COMPILER /usr/bin/g++)
-    # set(CMAKE_C_COMPILER /usr/bin/gcc)
+    message("[MDTOOL] Compiling for native architecture")
 endif()
 
 project(mdtool-${ARCH} VERSION ${MDTOOL_VERSION})
