feature: added new parameters to setup info command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ if("${ARCH}" STREQUAL "armhf")
     message("[MDTOOL] Compiling for armhf")
     set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++)
     set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc)
-elseif("${ARCH}" STREQUAL "aarm64")
-    message("[MDTOOL] Compiling for aarm64")
+elseif("${ARCH}" STREQUAL "arm64")
+    message("[MDTOOL] Compiling for arm64")
     set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++)
     set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc)
 else()
