--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -1,11 +1,12 @@
 [motor]
-name = EX8108
-pole pairs = 21
-torque constant = 0.091
+name = AK60_6
+pole pairs = 0
+KV = 80
+torque constant = 0.119
 torque constant a = -0.00004
 torque constant b = 0.0009
 torque constant c = 0.0681
-gear ratio = 1
+gear ratio = 0.166666
 max current = 10
 torque bandwidth = 500
 dynamic friction = 0.0
@@ -30,7 +31,7 @@ windup = 1.5
 max out = 10.0
 
 [impedance PD]
-kp = 0.8
-kd = 0.015
+kp = 3.5
+kd = 0.25
 max out = 10.0
 
