--- a/template_package/etc/mdtool/mdtool_motors/BGM4114.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/BGM4114.cfg
@@ -1,13 +1,13 @@
 [motor]
-name = MN4004
-pole pairs = 12
-KV = 400
-torque constant = 0.0159
+name = BGM4114
+pole pairs = 11
+KV = 50
+torque constant = 0
 torque constant a = 0
 torque constant b = 0.0
 torque constant c = 0.0
 gear ratio = 1.0
-max current = 10
+max current = 5
 torque bandwidth = 500
 dynamic friction = 0.0
 static friction = 0.0
@@ -31,7 +31,7 @@ windup = 1.5
 max out = 1.0
 
 [impedance PD]
-kp = 0.1
+kp = 0.5
 kd = 0.001
-max out = 5.0
+max out = 1.0
 
