--- a/template_package/etc/mdtool/mdtool_motors/EX8108_RLS.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/EX8108_RLS.cfg
@@ -1,6 +1,7 @@
 [motor]
-name = EX8108
+name = EX8108_RLS
 pole pairs = 21
+KV = 105
 torque constant = 0.091
 torque constant a = -0.00004
 torque constant b = 0.0009
@@ -12,8 +13,9 @@ dynamic friction = 0.0
 static friction = 0.0
 
 [output encoder]
-output encoder = 0
-output encoder dir = 0
+output encoder = 1
+output encoder dir = -1
+output encoder default baud = 115200
 
 [position PID]
 kp = 20.0
