feature: updated to support register temperature readings

--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -16,6 +16,7 @@ output encoder = 0
 output encoder dir = -1
 dynamic friction = 0.0
 static friction = 0.0
+shutdown temp = 40
 
 
 [limit max]
@@ -32,3 +33,4 @@ output encoder = 2
 output encoder dir = 1
 dynamic friction = 0.5
 static friction = 0.8
+shutdown temp = 140
