--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -20,6 +20,8 @@ torque bandwidth = 500
 # dynamic and static friction coefficients in Nm (not yet implemented)
 dynamic friction = 0.0
 static friction = 0.0
+# motor shutdown temperature 
+shutdown temp = 80
 
 [output encoder]
 # output encoder is connected - 1 / is not connected - 0
