--- a/template_package/etc/mdtool/mdtool_motors/MN4004.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/MN4004.cfg
@@ -11,6 +11,7 @@ max current = 10
 torque bandwidth = 500
 dynamic friction = 0.0
 static friction = 0.0
+shutdown temp = 80
 
 [output encoder]
 output encoder = 0
