--- a/template_package/etc/mdtool/mdtool_motors/GB4106.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/GB4106.cfg
@@ -11,6 +11,7 @@ max current = 5
 torque bandwidth = 500
 dynamic friction = 0.0
 static friction = 0.0
+shutdown temp = 80
 
 [output encoder]
 output encoder = 0
