--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -5,12 +5,12 @@ name = AK60_6
 pole pairs = 0
 # declated KV of the motor - its used when torque constant is set to zero
 KV = 80
-# torque constant Nm/A
+# motor torque constant Nm/A 
 torque constant = 0.119
 # 2nd degree polynomial used to aproximate nonlinear torque constant (in most applications you should leave it at zero)
-torque constant a = -0.00004
-torque constant b = 0.0009
-torque constant c = 0.0681
+torque constant a = 0.0
+torque constant b = 0.0
+torque constant c = 0.0
 # gear ratio -> example 6:1 reductor is 0.166666 whereas 1:2 multiplicator is 2
 gear ratio = 0.166666
 # maximum allowable phase current (can be also changed using "mdtool config current" command)
@@ -35,7 +35,7 @@ output encoder dir = 0
 output encoder default baud = 115200
 
 [position PID]
-# position PID default gains (used at every startup)
+# position PID default gains (used at every startup, then can be modified using the C++/Python script)
 kp = 20.0
 ki = 0.5
 kd = 0.0f
@@ -43,7 +43,7 @@ windup = 15.0
 max out = 30.0
 
 [velocity PID]
-# velocity PID default gains (used at every startup)
+# velocity PID default gains (used at every startup, then can be modified using the C++/Python script)
 kp = 0.05
 ki = 0.5
 kd = 0.0
@@ -51,7 +51,7 @@ windup = 1.5
 max out = 10.0
 
 [impedance PD]
-# impedance PID default gains (used at every startup)
+# impedance PID default gains (used at every startup, then can be modified using the C++/Python script)
 kp = 3.5
 kd = 0.25
 max out = 10.0
