fix: no need to uninstall mdtool first now, added info about dialout group

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(CPACK_PACKAGE_DESCRIPTION "Console tool for configuring and setting up MD80 
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${ARCH})
 set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${PROJECT_SOURCE_DIR}/template_package/postinst")
 
+set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL "ON")
 include(CPack)
 
 install(TARGETS ${PROJECT_NAME}
