feature: updated configs to support new aux encoder feature

--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_AUX.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_AUX.cfg
@@ -1,22 +1,20 @@
 [motor]
-name = EX8108_RLS
+name = AK80_9_AUX
 pole pairs = 21
-KV = 105
 torque constant = 0.091
 torque constant a = 0.0
 torque constant b = 0.0
 torque constant c = 0.0
-gear ratio = 1
-max current = 10
+gear ratio = 0.11111
+max current = 20
 torque bandwidth = 500
 dynamic friction = 0.0
 static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
-output encoder = 1
-output encoder dir = -1
-output encoder default baud = 115200
+output encoder = AMS5047_CENTER
+use for motion = 1
 
 [position PID]
 kp = 20.0
@@ -26,14 +24,14 @@ windup = 15.0
 max out = 30.0
 
 [velocity PID]
-kp = 0.05
+kp = 0.35
 ki = 0.5
 kd = 0.0
 windup = 1.5
 max out = 10.0
 
 [impedance PD]
-kp = 0.8
-kd = 0.015
+kp = 3.5
+kd = 0.25
 max out = 10.0
 
