--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -24,15 +24,13 @@ static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
-# output encoder is connected - 1 / is not connected - 0
+# output encoder type - valid types: AMS5047_CENTER
 output encoder = 0
-# output encoder direction 
-# the direction could be determined in the following way (RLS encoder type):
-# if the magnetic strip is facing a positive direction of the motor axis set dir to 1.0f (positive direction goes from the controller through the motor shaft)
-# if the magnetic strip is facing a negative direction of the motor axis set dir to -1.0f
-output encoder dir = 0
-# default baudrate of the RLS encoder
-output encoder default baud = 115200
+# when set to 1 the encoder will be used for output shaft motion instead of the build-in one. 
+# when set to 0 the output encoder will be only used for initial position determination (especially useful on geared motors)
+# !!NOTE!!: after each mechanical change (reversing the encoder in respect to the magnet) it is crucial to run the output encoder calibration: 
+# mdtool setup calibrationAux <ID>
+use for motion = 0
 
 [position PID]
 # position PID default gains (used at every startup, then can be modified using the C++/Python script)
