feature: added support for off axis and center AMS output encoder

--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -24,13 +24,10 @@ static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
-# output encoder type - valid types: AMS5047_CENTER
+# output encoder type - valid types: AMS5047_CENTER, AMS5047_OFFAXIS
 output encoder = 0
-# when set to 1 the encoder will be used for output shaft motion instead of the build-in one. 
-# when set to 0 the output encoder will be only used for initial position determination (especially useful on geared motors)
-# !!NOTE!!: after each mechanical change (reversing the encoder in respect to the magnet) it is crucial to run the output encoder calibration: 
-# mdtool setup calibrationAux <ID>
-use for motion = 0
+# output encoder mode - valid modes: STARTUP, MOTION, REPORT
+output encoder mode = 0
 
 [position PID]
 # position PID default gains (used at every startup, then can be modified using the C++/Python script)
