--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
@@ -1,5 +1,5 @@
 [motor]
-name = AK80_9_AUX
+name = AK80_9_AUX_CENT_MOT
 pole pairs = 21
 torque constant = 0.091
 torque constant a = 0.0
@@ -14,7 +14,7 @@ shutdown temp = 80
 
 [output encoder]
 output encoder = AMS5047_CENTER
-use for motion = 1
+output encoder mode = MOTION
 
 [position PID]
 kp = 20.0
@@ -34,4 +34,5 @@ max out = 10.0
 kp = 3.5
 kd = 0.25
 max out = 10.0
+
 
