fix: fixed typos in encoder names

--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -24,7 +24,7 @@ static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
-# output encoder type - valid types: AMS5047_CENTER, AMS5047_OFFAXIS
+# output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS
 output encoder = 0
 # output encoder mode - valid modes: STARTUP, MOTION, REPORT
 output encoder mode = 0
