--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
@@ -13,7 +13,7 @@ static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
-output encoder = AMS5047_CENTER
+output encoder = AS5047_CENTER
 output encoder mode = MOTION
 
 [position PID]
