--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_start.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_start.cfg
@@ -1,15 +1,15 @@
 [motor]
-name = AK80_6
+name = AK80_9_AUX_CENT_STA
 pole pairs = 21
 torque constant = 0.091
-gear ratio = 0.166666
-max current = 10
+gear ratio = 0.11111
+max current = 20
 torque bandwidth = 500
 shutdown temp = 80
 
 [output encoder]
-output encoder = 0
-output encoder mode = 0
+output encoder = AS5047_CENTER
+output encoder mode = STARTUP
 
 [position PID]
 kp = 20.0
@@ -19,7 +19,7 @@ windup = 15.0
 max out = 30.0
 
 [velocity PID]
-kp = 0.05
+kp = 0.35
 ki = 0.5
 kd = 0.0
 windup = 1.5
@@ -29,4 +29,5 @@ max out = 10.0
 kp = 3.5
 kd = 0.25
 max out = 10.0
+
 
