--- a/template_package/etc/mdtool/mdtool_motors/EX8108.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/EX8108.cfg
@@ -2,18 +2,14 @@
 name = EX8108
 pole pairs = 21
 torque constant = 0.091
-torque constant a = 0.0
-torque constant b = 0.0
-torque constant c = 0.0
 gear ratio = 1
 max current = 10
 torque bandwidth = 500
-dynamic friction = 0.0
-static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
 output encoder = 0
+output encoder mode = 0
 
 [position PID]
 kp = 20.0
