--- a/template_package/etc/mdtool/mdtool_motors/GB4106.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/GB4106.cfg
@@ -3,18 +3,14 @@ name = GB4106
 pole pairs = 7
 KV = 50
 torque constant = 0.18
-torque constant a = 0.0
-torque constant b = 0.0
-torque constant c = 0.0
 gear ratio = 1.0
 max current = 5
 torque bandwidth = 500
-dynamic friction = 0.0
-static friction = 0.0
 shutdown temp = 80
 
 [output encoder]
 output encoder = 0
+output encoder mode = 0
 
 [position PID]
 kp = 10.0
