--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -1,5 +1,5 @@
 [general]
-version = "1.2.1"
+version = "1.2.3.d"
 
 [communication]
 bus=USB
@@ -20,7 +20,7 @@ output encoder dir = -1
 dynamic friction = 0.0
 static friction = 0.0
 shutdown temp = 40
-
+shunt resistance = 0.001
 
 [limit max]
 pole pairs = 80
@@ -36,3 +36,4 @@ output encoder dir = 1
 dynamic friction = 0.5
 static friction = 0.8
 shutdown temp = 140
+shunt resistance = 0.01
