feature: updated default AK80-6 config with RLS field

--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -2,7 +2,7 @@
 # motor name [20 characters max]
 name = AK60_6
 # pole pairs - the number of rotor magnets/2 if you are unsure just type zero - during calibration it will be autodetected 
-pole pairs = 0
+pole pairs = 14
 # declated KV of the motor - its used when torque constant is set to zero
 KV = 80
 # motor torque constant Nm/A 
@@ -17,7 +17,7 @@ torque bandwidth = 500
 shutdown temp = 80
 
 [output encoder]
-# output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS
+# output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS, MB053SFA17BENT00
 output encoder = 0
 # output encoder mode - valid modes: STARTUP, MOTION, REPORT
 output encoder mode = 0
