--- a/template_package/etc/mdtool/mdtool_motors/AK80-9.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9.cfg
@@ -7,6 +7,18 @@ max current = 20
 torque bandwidth = 500
 shutdown temp = 80
 
+[limits]
+max torque = 1.0
+max velocity = 20.0
+max position = 50.0
+min position = -50.0
+max acceleration = 100.0
+
+[profile]
+acceleration = 10.0
+deceleration = 10.0
+velocity = 10.0
+
 [output encoder]
 output encoder = 0
 output encoder mode = 0
@@ -16,17 +28,15 @@ kp = 20.0
 ki = 0.5
 kd = 0.0f
 windup = 15.0
-max out = 30.0
 
 [velocity PID]
 kp = 0.35
 ki = 0.5
 kd = 0.0
 windup = 1.5
-max out = 10.0
 
 [impedance PD]
 kp = 3.5
 kd = 0.25
-max out = 10.0
+
 
