feature: updated default configs to new format

--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
@@ -7,6 +7,18 @@ max current = 20
 torque bandwidth = 500
 shutdown temp = 80
 
+[limits]
+max torque = 1.0
+max velocity = 50.0
+max position = 100
+min position = -100
+max acceleration = 100.0
+
+[profile]
+acceleration = 10.0
+deceleration = 10.0
+velocity = 20.0
+
 [output encoder]
 output encoder = AS5047_CENTER
 output encoder mode = MOTION
