--- a/template_package/etc/mdtool/mdtool_motors/MN4004.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/MN4004.cfg
@@ -8,6 +8,18 @@ max current = 10
 torque bandwidth = 500
 shutdown temp = 80
 
+[limits]
+max torque = 1.0
+max velocity = 50.0
+max position = 100
+min position = -100
+max acceleration = 100.0
+
+[profile]
+acceleration = 10.0
+deceleration = 10.0
+velocity = 20.0
+
 [output encoder]
 output encoder = 0
 output encoder mode = 0
@@ -17,17 +29,14 @@ kp = 10.0
 ki = 0.3
 kd = 0.0f
 windup = 5.0
-max out = 20.0
 
 [velocity PID]
 kp = 0.0006
 ki = 0.1
 kd = 0.0
 windup = 1.5
-max out = 1.0
 
 [impedance PD]
 kp = 0.1
 kd = 0.001
-max out = 5.0
 
