--- a/template_package/etc/mdtool/mdtool_motors/TURNIGY_6364.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/TURNIGY_6364.cfg
@@ -8,6 +8,18 @@ max current = 20
 torque bandwidth = 500
 shutdown temp = 80
 
+[limits]
+max torque = 1.0
+max velocity = 50.0
+max position = 100
+min position = -100
+max acceleration = 100.0
+
+[profile]
+acceleration = 10.0
+deceleration = 10.0
+velocity = 20.0
+
 [output encoder]
 output encoder = 0
 
@@ -16,17 +28,14 @@ kp = 20.0
 ki = 0.5
 kd = 0.0f
 windup = 15.0
-max out = 30.0
 
 [velocity PID]
 kp = 0.05
 ki = 0.5
 kd = 0.0
 windup = 1.5
-max out = 10.0
 
 [impedance PD]
 kp = 1.0
 kd = 0.02
-max out = 10.0
 
