feature: added safety limits for motion params

--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -23,6 +23,7 @@ max velocity = 50.0
 max position = 100
 min position = -100
 max acceleration = 100.0
+max deceleration = 100.0
 
 # position and veloctity profile settings
 [profile]
