--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -21,6 +21,9 @@ dynamic friction = 0.0
 static friction = 0.0
 shutdown temp = 40
 shunt resistance = 0.001
+max acceleration = 1
+max deceleration = 1
+max velocity = 1
 
 [limit max]
 pole pairs = 80
@@ -37,3 +40,6 @@ dynamic friction = 0.5
 static friction = 0.8
 shutdown temp = 140
 shunt resistance = 0.01
+max acceleration = 10000
+max deceleration = 10000
+max velocity = 1500
