--- a/template_package/etc/mdtool/mdtool_motors/AK80-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-6.cfg
@@ -13,6 +13,7 @@ max velocity = 50.0
 max position = 100
 min position = -100
 max acceleration = 100.0
+max deceleration = 100.0
 
 [profile]
 acceleration = 10.0
@@ -28,17 +29,15 @@ kp = 20.0
 ki = 0.5
 kd = 0.0f
 windup = 15.0
-max out = 30.0
 
 [velocity PID]
 kp = 0.05
 ki = 0.5
 kd = 0.0
 windup = 1.5
-max out = 10.0
 
 [impedance PD]
 kp = 3.5
 kd = 0.25
-max out = 10.0
+
 
