--- a/template_package/etc/mdtool/mdtool_motors/MN5006.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/MN5006.cfg
@@ -14,6 +14,7 @@ max velocity = 50.0
 max position = 100
 min position = -100
 max acceleration = 100.0
+max deceleration = 100.0
 
 [profile]
 acceleration = 10.0
