feature: added support for main encoder direction reversing

--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -1,5 +1,5 @@
 [general]
-version = "1.3.2"
+version = "1.3.0"
 
 [communication]
 bus=USB
@@ -24,6 +24,7 @@ shunt resistance = 0.001
 max acceleration = 1
 max deceleration = 1
 max velocity = 1
+reverse direction = 0
 
 [limit max]
 pole pairs = 80
@@ -43,3 +44,4 @@ shunt resistance = 0.01
 max acceleration = 10000
 max deceleration = 10000
 max velocity = 1500
+reverse direction = 1
