--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 14)
 
 set(MDTOOL_VERSION 1.3.1)
+set(MDTOOL_VERSION_TAG 'd')
 
 if(NOT DEFINED ARCH)
     set(ARCH "native")
@@ -43,9 +44,10 @@ set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "mdtool")
 
 string(REGEX MATCH "([0-9]+)\\.([0-9]+)\\.([0-9]+)" _ "${MDTOOL_VERSION}")
 target_compile_definitions(${PROJECT_NAME}
-    PRIVATE MDTOOL_VERSION_MAJOR=${CMAKE_MATCH_1}
-    PRIVATE MDTOOL_VERSION_MINOR=${CMAKE_MATCH_2}
-    PRIVATE MDTOOL_VERSION_REVISION=${CMAKE_MATCH_3}
+    PRIVATE MDTOOL_VMAJOR=${CMAKE_MATCH_1}
+    PRIVATE MDTOOL_VMINOR=${CMAKE_MATCH_2}
+    PRIVATE MDTOOL_VREVISION=${CMAKE_MATCH_3}
+    PRIVATE MDTOOL_VTAG=${MDTOOL_VERSION_TAG}
 )
 
 if(MAKE_TESTS)
