--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 14)
 
-set(MDTOOL_VERSION 1.3.2)
-set(MDTOOL_VERSION_TAG 'd')
+set(MDTOOL_VERSION 1.4.0)
+set(MDTOOL_VERSION_TAG 'r')
 
 if(NOT DEFINED ARCH)
     set(ARCH "native")
