fix: Config files updated.
Comments and style fixed.

--- a/template_package/etc/mdtool/mdtool.ini
+++ b/template_package/etc/mdtool/mdtool.ini
@@ -5,43 +5,43 @@ version = "1.4.0"
 bus=USB
 device=""
 
-# do not edit - factory limit settings 
+; do not edit - factory limit settings 
 [limit min]
-pole pairs = 0
-torque constant = 0
-KV = 0
+pole pairs = 0.0
+torque constant = 0.0
+KV = 0.0
 gear ratio = 0.005
-max current = 1
+max current = 1.0
 torque constant a = -1.0
 torque constant b = -1.0
 torque constant c = -1.0
-torque bandwidth = 50
-output encoder dir = -1
+torque bandwidth = 50.0
+output encoder dir = -1.0
 dynamic friction = 0.0
 static friction = 0.0
-shutdown temp = 40
+shutdown temp = 40.0
 shunt resistance = 0.001
-max acceleration = 1
-max deceleration = 1
-max velocity = 1
-reverse direction = 0
+max acceleration = 1.0
+max deceleration = 1.0
+max velocity = 1.0
+reverse direction = 0.0
 
 [limit max]
-pole pairs = 80
+pole pairs = 80.0
 torque constant = 1.0
-KV = 1000
-gear ratio = 200
-max current = 80
+KV = 1000.0
+gear ratio = 200.0
+max current = 80.0
 torque constant a = 1.0
 torque constant b = 1.0
 torque constant c = 1.0
-torque bandwidth = 2500
-output encoder dir = 1
+torque bandwidth = 2500.0
+output encoder dir = 1.0
 dynamic friction = 0.5
 static friction = 0.8
-shutdown temp = 140
+shutdown temp = 140.0
 shunt resistance = 0.01
-max acceleration = 10000
-max deceleration = 10000
-max velocity = 1500
-reverse direction = 1
+max acceleration = 10000.0
+max deceleration = 10000.0
+max velocity = 1500.0
+reverse direction = 1.0
