--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -1,70 +1,68 @@
 [motor]
-# motor name [20 characters max]
+; motor name [20 characters max]
 name = AK60_6
-# pole pairs - the number of rotor magnets/2 if you are unsure just type zero - during calibration it will be autodetected 
-pole pairs = 14
-# declated KV of the motor - its used when torque constant is set to zero
-KV = 80
-# motor torque constant Nm/A 
+; pole pairs - the number of rotor magnets/2 if you are unsure just type zero - during calibration it will be autodetected 
+pole pairs = 14.0
+; declated KV of the motor - its used when torque constant is set to zero
+KV = 80.0
+; motor torque constant [Nm/A] 
 torque constant = 0.119
-# gear ratio -> example 6:1 reductor is 0.166666 whereas 1:2 multiplicator is 2
-gear ratio = 0.166666
-# maximum allowable phase current (can be also changed using "mdtool config current" command)
-max current = 10
-# torque bandwidth in Hz (please refer to the manual for more info)
-torque bandwidth = 500
-# motor shutdown temperature 
-shutdown temp = 80
+; gear ratio -> example 6:1 reductor is 0.166666 whereas 1:2 multiplicator is 2
+gear ratio = 0.166666 
+; maximum allowable phase current (can be also changed using "mdtool config current" command)
+max current = 10.0
+; torque bandwidth [Hz] (please refer to the manual for more info)
+torque bandwidth = 500.0
+; motor shutdown temperature [°C]
+shutdown temp = 80.0
 
-# global limits - please refer to the manual for more information
+; global limits - please refer to the manual for more information
 [limits]
 max torque = 1.0
 max velocity = 50.0
-max position = 100
-min position = -100
+max position = 100.0
+min position = -100.0
 max acceleration = 100.0
 max deceleration = 100.0
 
-# position and veloctity profile settings
+; position and veloctity profile settings
 [profile]
 acceleration = 10.0
 deceleration = 10.0
 velocity = 20.0
 
 [output encoder]
-# output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS, MB053SFA17BENT00, CM_OFFAXIS
+; output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS, MB053SFA17BENT00, CM_OFFAXIS
 output encoder = 0
-# output encoder mode - valid modes: STARTUP, MOTION, REPORT
+; output encoder mode - valid modes: STARTUP, MOTION, REPORT
 output encoder mode = 0
 
+; position PID default gains (used at every startup, then can be modified using the C++/Python script)
 [position PID]
-# position PID default gains (used at every startup, then can be modified using the C++/Python script)
 kp = 20.0
 ki = 0.5
-kd = 0.0f
+kd = 0.0
 windup = 15.0
 
+; velocity PID default gains (used at every startup, then can be modified using the C++/Python script)
 [velocity PID]
-# velocity PID default gains (used at every startup, then can be modified using the C++/Python script)
 kp = 0.05
 ki = 0.5
 kd = 0.0
 windup = 1.5
 
-# impedance PID default gains (used at every startup, then can be modified using the C++/Python script)
+; impedance PID default gains (used at every startup, then can be modified using the C++/Python script)
 [impedance PD]
 kp = 3.5
 kd = 0.25
 
 
 [homing]
-# valid modes: OFF, SENSORLESS. When mode != OFF homing is required on each startup
+; valid modes: OFF, SENSORLESS. When mode != OFF homing is required on each startup
 mode = OFF
-# maximum allowed travel from any startup position during homing [rad]
-max travel = 100
-# maximum torque during homing [Nm]
+; maximum allowed travel from any startup position during homing [rad]
+max travel = 100.0
+; maximum torque during homing [Nm]
 max torque = 0.2
-# maximum velocity during homing [rad/s]
-max velocity = 10
-
-
+; maximum velocity during homing [rad/s]
+max velocity = 10.0
