--- a/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK60-6.cfg
@@ -34,7 +34,7 @@ velocity = 20.0
 [output encoder]
 # output encoder type - valid types: AS5047_CENTER, AS5047_OFFAXIS, MB053SFA17BENT00, CM_OFFAXIS
 output encoder = 0
-# output encoder mode - valid modes: STARTUP, MOTION, REPORT
+# output encoder mode - valid modes: STARTUP, MOTION, CALIBRATED_REPORT
 output encoder mode = 0
 
 [position PID]
