fix: configs changed to match new encoder name

--- a/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
+++ b/template_package/etc/mdtool/mdtool_motors/AK80-9_aux_center_mot.cfg
@@ -21,7 +21,7 @@ deceleration = 10.0
 velocity = 20.0
 
 [output encoder]
-output encoder = AS5047_CENTER
+output encoder = ME_AS_CENTER
 output encoder mode = MOTION
 
 [position PID]
